# oop-tasks

./: .gitignore  .gitmodules  README.md
java-task2/: build.gradle  settings.gradle
java-task2/src/main/resources/: commands.properties  log4j2.xml
java-task2/src/test/java/: CommandsTests.java  StackCalculatorTests.java
java-task2_stackCalc/src/main/resources/: log4j2.xml
java-task3/: build.gradle  records.json
java-task3/src/main/resources/settings/: settings.properties
java-task3_minesweeper/: settings.gradle
java-task3_minesweeper/src/main/resources/settings/: settings.properties
java-task4/: build.gradle
java-task4/src/main/resources/: log4j2.xml
java-task5/: README.md  settings.gradle
java-task5/client/: build.gradle
java-task5/server/: build.gradle
java-task5/server/src/main/resources/: log4j2.xml
java-task5/utilities/: build.gradle
task0/: CMakeLists.txt
task0/example/: in.txt  out_vim.csv
task0/src/: main.cpp
task0_csvWordCounter/example/: out.csv
task1/: CMakeLists.txt
task1/src/: TritSet.cpp  TritSet.h  main.cpp  tritSet.cpp  tritSet.h
task1_tritSet/src/: main.cpp  trit.cpp  trit.h  tritSet.h
task2/: CMakeLists.txt
task2/app/: CMakeLists.txt  main.cpp
task2/include/: argsParser.h  worker.h  workers.h  workersFactory.h  workflowExecutor.h  workflowParser.h
task2/src/: CMakeLists.txt  argsParser.cpp  argsParser.h  main.cpp  worker.cpp  worker.h  workers.cpp  workers.h  workersFactory.h  workflowExecutor.cpp  workflowExecutor.h  workflowParser.cpp  workflowParser.h
task2/test/: task2  workflow_1_correct.txt
task2/test/0/: workflow.txt
task2/test/1/: in.txt
task2/test/2/: workflow.txt
task2/test/3/: workflow.txt
task2/test/5/: out.txt  workflow.txt
task2/test/7/: workflow.txt
task2/test/8/: workflow.txt
task2/test/9/: out.txt  workflow.txt
task2_workflow/: CMakeLists.txt
task2_workflow/app/: main.cpp
task2_workflow/include/: argsParser.h  worker.h  workers.h  workersFactory.h  workflowExecutor.h  workflowParser.h
task2_workflow/src/: worker.cpp  workers.cpp  workflowParser.cpp
task2_workflow/test/: script.sh
task2_workflow/test/1/: workflow.txt
task2_workflow/test/4/: workflow.txt
task2_workflow/test/6/: out.txt  workflow.txt
task3/: CMakeLists.txt
task3/app/: main.cpp
task3/libs/optionparser/: CMakeLists.txt
task3/src/: main.cpp
task3/src/game/: gameLogic.cpp  gameLogic.h
task3/src/game/board/: board.cpp  board.h  boardShip.cpp  boardShip.h
task3/src/game/board/include/: board.h
task3/src/game/logic/: gameLogic.cpp
task3/src/game/logic/include/: gameLogic.h
task3/src/game/ships/: coordinate.cpp  coordinate.h  ship.cpp  ship.h  shipCreator.cpp  shipCreator.h  shipTypes.h  shotStatus.h
task3/src/game/ships/include/: coordinate.h  ship.h  shipTypes.h
task3/src/graphics/: consoleGame.cpp  consoleGame.h  gameLogic.h  gameView.cpp  gameView.h
task3/src/graphics/console/: consoleController.cpp  consoleController.h  consoleView.cpp  consoleView.h
task3/src/graphics/console/include/: consoleView.h
task3/src/graphics/include/: gameView.h
task3/src/graphics/sfml/: sfmlView.cpp  sfmlView.h
task3/src/playerControllers/: consolePlayerController.cpp  consolePlayerController.h  optimalPlayerController.cpp  optimalPlayerController.h  playerController.cpp  playerController.h  randomPlayerController.cpp  randomPlayerController.h
task3/src/playerControllers/include/: optimalPlayerController.h  randomPlayerController.h
task3/src/utility/: console.cpp  random.cpp  random.h
task3/src/utility/include/: factory.h  random.h
task3_battleships/: CMakeLists.txt  readme.md
task3_battleships/app/: CMakeLists.txt
task3_battleships/src/: CMakeLists.txt
task3_battleships/src/game/board/: boardShip.cpp
task3_battleships/src/game/board/include/: boardShip.h
task3_battleships/src/game/ships/: shipCreator.cpp
task3_battleships/src/game/ships/include/: shipCreator.h  shotStatus.h
task3_battleships/src/graphics/: gameView.cpp
task3_battleships/src/playerControllers/: consolePlayerController.cpp
task3_battleships/src/playerControllers/include/: consolePlayerController.h  playerController.h
task3_battleships/src/utility/include/: console.h  utils.h
task4/: CMakeLists.txt  main.cpp
task4/include/: csvParser.h
task4/src/: csvParser.cpp
task4_templatesCSVParser/include/: tuplePrint.h
(+124 files in other folders)
